# parking-hackathon-backend

./: .env.example  .gitignore  AGENTS.md  DockerFile  README.md  docker-compose.dev.yml  pyproject.toml
.agents/api-layer/: SKILL.md
.agents/architecture/: SKILL.md
.agents/auth-and-security/: SKILL.md
.agents/code-conventions/: SKILL.md
.agents/commits-and-prs/: SKILL.md
.agents/database-and-repository/: SKILL.md
.agents/email-and-tasks/: SKILL.md
.agents/feature-scaffold/: SKILL.md
.agents/requirement-design-implementation/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
app/: main.py
app/core/: cache.py  celery_app.py  config.py  database.py  exception.py  mail.py  qdrant.py  redis.py  security.py  token_blacklist.py
app/features/auth/controllers/: auth_controller.py
app/features/auth/models/: auth_schema.py
app/features/auth/routes/: auth_routes.py
app/features/auth/services/: auth_service.py
app/features/chatbot/controllers/: chatbot_controller.py
app/features/chatbot/models/: chatbot_responses.py  chatbot_schemas.py
app/features/chatbot/prompts/: system.txt
app/features/chatbot/repositories/: chatbot_repository.py  (+1 more)
app/middlewares/: jwt_middleware.py  onboarding_middleware.py  roles_middleware.py
app/tasks/: email_tasks.py  knowledge_tasks.py
app/templates/: recover_password.html  welcome_mail.html  welcome_registration_mail.html
app/utils/: base_schema.py  date_formatter.py  logger.py  periods.py  plate_formatter.py  round_to_50.py  safe_types.py
database/: parking_db_ddl.sql  parking_db_dml.sql  parking_db_view.sql
(+74 files in other folders)
